============
 Condor2Nav
============

Version: 0.5 (WIP)
==================
- Optional WP file generation for XCSoar/LK8000 support added
- LK8000 1.17e support added (task files format updated)
- More task data for start and finish turnpoints now set in PRF file
- Project related text files now have .txt extension
- Waypoints accuracy fixed to exactly match map files

Version: 0.4
============
- Sceneries UTC Offset support removed
- Nasty bug (introduced in 0.3) with writing to a local file fixed (thanks bo)
- Reading of XCSoar/LK8000 configuration file directly from target device added

Version: 0.3
============
- Fixed bug for duplicated TP names in a scenery for XCSoar and LK8000 targets
- ActiveSync support added

Version: 0.2
============
- Support for LK8000 added
- Support for INI files comment added
- Not existing "AutoAdvance" PRF parameter problem fixed

Version: 0.1
============
- Initial version with XCSoar support