@@ -39,7 +39,7 @@ RockyMountains,,RockyMountains.xcm
 Scotland,,Scotland.xcm
 ScotlandHD,,Scotland.xcm
 Sierra Nevada,,SierraNevada.xcm
-SlovakiaCE,,SlovakiaCE.xcm
+SlovakiaCE,SlovakiaCE_5.01.csv,SlovakiaCE_5.01.xcm
 Slovenia,,Slovenia.xcm
 Vysocina2,,Vysocina.xcm
 West_swiss,,WestSwiss.xcm
