@@ -146,11 +146,14 @@ void condor2nav::CTargetLK8000::Glider(const CFileParserCSV::CStringArray &glide
 *
 * @param taskParser Condor task parser. 
 * @param coordConv  Condor coordinates converter.
+* @param sceneryData Information describing the scenery. 
 **/
-void condor2nav::CTargetLK8000::Task(const CFileParserINI &taskParser, const CCondor::CCoordConverter &coordConv)
+void condor2nav::CTargetLK8000::Task(const CFileParserINI &taskParser, const CCondor::CCoordConverter &coordConv, const CFileParserCSV::CStringArray &sceneryData)
 {
   unsigned wpFile(Convert<unsigned>(ConfigParser().Value("LK8000", "TaskWPFileGenerate")));
-  TaskProcess(*_profileParser, taskParser, coordConv, _outputTaskFilePath, xcsoar::MAXTASKPOINTS_LK8000, xcsoar::MAXSTARTPOINTS_LK8000, wpFile > 0, _outputLK8000DataPath + _outputWaypointsSubDir);
+  TaskProcess(*_profileParser, taskParser, coordConv, sceneryData,
+              _outputTaskFilePath, xcsoar::MAXTASKPOINTS_LK8000, xcsoar::MAXSTARTPOINTS_LK8000,
+              wpFile > 0, _outputLK8000DataPath + _outputWaypointsSubDir);
 }
  
 
